# named_pipe

./: README.md
boost/: client.cpp  host.cpp
v1/: CMakeLists.txt  client.cpp  host.cpp
win_boost/: CMakeLists.txt  client.cpp  host.cpp
